<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:tooltipText="@string/profile_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/ic_baseline_account_circle_24" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:tooltipText="@string/account_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_photo_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:text="@string/account_name" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:drawablePadding="5dp"
        android:textSize="12sp"
        android:tooltipText="@string/username"
        app:drawableStartCompat="@drawable/ic_baseline_person_24_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_photo_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:drawablePadding="5dp"
        android:textSize="12sp"
        android:tooltipText="@string/repository"
        app:drawableStartCompat="@drawable/ic_baseline_inventory_2_24_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        tools:text="@string/repository" />

    <TextView
        android:id="@+id/tv_followers_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:drawablePadding="5dp"
        android:textSize="12sp"
        android:tooltipText="@string/followers_and_following_word"
        app:drawableStartCompat="@drawable/ic_twotone_people_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_photo_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        tools:text="@string/followers_following" />
</androidx.constraintlayout.widget.ConstraintLayout>